<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/resultViewSize"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:digits="1,2,3,4,5,6,7,8,9,0,."
        android:ems="10"
        android:hint="@string/inputOne"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/inputTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultView" />

    <EditText
        android:id="@+id/inputTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:digits="1,2,3,4,5,6,7,8,9,0,."
        android:ems="10"
        android:hint="@string/inputTwo"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/inputTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputOne" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDiv"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/operationBtnS"
        app:layout_constraintBottom_toBottomOf="@id/btnPro"
        app:layout_constraintEnd_toEndOf="@id/btnDif"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnPro" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/btnAdd"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/operationBtnS"
        app:layout_constraintEnd_toStartOf="@id/btnDif"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTwo" />

    <Button
        android:id="@+id/btnDif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDif"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/operationBtnS"
        app:layout_constraintBaseline_toBaselineOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnAdd" />

    <Button
        android:id="@+id/btnPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPro"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/operationBtnS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintStart_toStartOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/btnDelete"
        app:layout_constraintBottom_toTopOf="@id/btnDif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toEndOf="@id/inputTwo"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditos"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/inputTextSize"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>